<resources>
    <string name="app_name">TP 1 - Novo</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="salvar">Salvar</string>
    <string name="apelido">Apelido</string>
    <string name="empresa">Empresa</string>
    <string name="avatar">avatar</string>
    <string name="linkedin">Linkedin</string>
    <string name="integracao">Integracao</string>
    <string name="voltar">Voltar</string>
    <string name="facebook_app_id">2006691912969809</string>
    <string name="fb_login_protocol_scheme">fb2006691912969809</string>
    <string name="profile_image">Profile image</string>
    <string name="user_name">User Name</string>
    <string name="profile_email">User E-mail</string>
    <string name="not_string"></string>
</resources>
